# fbbs

./: .gitignore  .hgignore  BUG_REPORT  CMakeLists.txt  COPYING  COPYRIGHT  Makefile  Makefile.am  bbs_clear.sh  bootstrap  config.h.in  configure  configure.ac  restart.sh
backend/: CMakeLists.txt  main.c  post.c  proxy.c
bbshome/: BOARDS
cmake/: FindHiRedis.cmake
code/: ann.c  anncheck.c  anntar.c  bbs.h  bbsgopher.h  chat.h  checkall.c  checkbm.c  checklong.c  checkspe.c  checkspestrong.c  chrecord.c  clrrec.c  config.h  correctspe.c  edit.h  functions.h  modes.h  permissions.h  record.c  screen.h  setpara.c  showrecord.c  struct.h  typedef.h  vote.h
doxygen/: custom.css  doxyfile  footer.html
fcgi/: CMakeLists.txt  bbsann.c  bbserr.c  bbsupload.c  board.c  friend.c  json.c  libweb.c  login.c  mail.c  main.c  parse.c  post.c  prop.c  register.c  session.c  toc.c  user.c  web.c  xml.c
game/: Makefile  chicken.c  game.c  money.c  winmine.c
html/: CMakeLists.txt  bbsmain.html  beta.htm  forum.htm  generator  index.htm  lab.htm  mobile.htm  reg.htm  sidemenu.js  style.css
html/bbs/: board.htm  board.html  favorite.html  index.htm  post-new.html  post.htm  post.html  sector.html  trend.html  user-card.html  user.htm  user.html
html/css/: bbs.css  bbs0.css  bbs1.css  bbs2.css  bbsfoot.css  bbsleft.css  bbsrss.xsl  bbssec.css  common.css  ie6fix.css  index.css  mobile.css  reg.css
html/css/redmond/: jquery-ui-1.8.15.custom.css  jquery-ui-1.8.16.custom.css
html/home/: index.htm
html/images/: sidemenu.js  stm31.js
html/js/: COPYING  bbs.js  bbsleft.js  bbsmail.js  bbspreupload.js  bbspst.js  bbsupload.js  index.js  jquery-ui-1.8.15.custom.min.js  jquery-ui-1.8.16.custom.min.js  lab.js  mobile.js  persist-all-min.js  persist.js  reg.js
html/sxsl/: bbscon.xsl
html/tmpl/: board-favorite.html  board-sector.html  board-toc-list.htm  board-toc.htm  board-toc.html  hot.html  post-content.htm  post-content.html  post-new.html  session-login.html  user-meta.htm
html/xsl/: bbs.xsl  bbs0an.xsl  bbsall.xsl  bbsanc.xsl  bbsbfind.xsl  bbsboa.xsl  bbsccc.xsl  bbscon.xsl  bbsdelmail.xsl  bbsdoc.xsl  bbseufile.xsl  bbsfall.xsl  bbsfav.xsl  bbsfoot.xsl  bbsgetmsg.xsl  bbsinfo.xsl  bbsleft.xsl  bbsmail.xsl  bbsmailcon.xsl  bbsmybrd.xsl  bbsnewmail.xsl  bbsnot.xsl  bbsovr.xsl  bbsovr2.xsl  bbspreupload.xsl  bbspst.xsl  bbspstmail.xsl  bbspwd.xsl  bbsqry.xsl  bbsrss.xsl  bbssec.xsl  bbssel.xsl  bbstcon.xsl  bbstop10.xsl  bbsupload.xsl  date-time.xsl  lab.xsl  misc.xsl  mobile.xsl  showpost.xsl  (+2 more)
i18n/: extract.sh  fbbs.po  fbbs.pot  update.sh
include/: CMakeLists.txt  bbs.h  bbserrno.h  chat.h  chat.h.in  config.h  config.h.cmake  config.h.in  func.h  functions.h  glossary.h  hash.h  libBBS.h  list.h  mmap.h  modes.h  permissions.h  post.h  record.h  register.h  screen.h  site.h  site_conf.h  site_conf.h.in  struct.h  sysconf.h  vote.h
js/: CMakeLists.txt  app.js  board.js  compat.js  cookie.js  homepage.js  main.js  post.js  session.js  store.js  template.js  ui.js  user.js  util.js
less/: CMakeLists.txt  board.less  default.less  fbbs.less  footer.less  homepage.less  navigation.less  post.less  reset.less  user.less  var.less
lib/: CMakeLists.txt  Makefile  Makefile.am  backend.c  board.c  boardrc.c  brdcache.c  cache.c  cfg.c  convert.c  file.c  fileio.c  friend.c  goodbrd.c  goodbrd.h  hash.c  helper.c  log.c  mail.c  mdbi.c  mmap.c  mmdecode.c  modetype.c  notification.c  parcel.c  pass.c  pg.c  pool.c  post.c  record.c  register.c  session.c  shm.c  socket.c  status.c  string.c  stuffs.c  sysconf.c  time.c  title.c  (+5 more)
libssh/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  auth.c  channels.c  config.c  connect.c  kex.c  keyfiles.c  messages.c  misc.c  options.c  scp.c  server.c  session.c  sftp.c  socket.c  wrapper.c
pg/: CMakeLists.txt  Convert.pm  board.sql  convert.pl  convert_board.pl  convert_favboard.pl  convert_posts.pl  convert_user.pl  favboard.sql  friend.sql  payment.sql  pg.c  post.sql  procedures.sql  (+4 more)
src/: CMakeLists.txt  Install.sh  Install.sh.in  Makefile  Makefile.am  active_board.c  admintool.c  alist.c  announce.c  autocomplete.c  bbs.c  bbsd.c  bbsnet.c  bcache.c  bm.c  board.c  boards.c  cached.c  chat.c  comm_lists.c  convert.c  delete.c  deny.c  edit.c  editor.c  fileshm.c  five.c  friend.c  goodbye.c  help.c  io.c  io.lint  list.c  mail.c  main.c  maintain.c  menu.c  miscd.c  money_admin.c  more.c  (+30 more)
util/: AnnIndex.c  CMakeLists.txt  Helper.pm  account.c  archiver  averun.c  badbms.c  bbstop.c  bbsuptime.c  birthday.c  board.c  board_convert  chart.c  chart.h  chboard.c  checkbms.c  clean_session.c  cleanuser.c  convert.c  convert.pl  convert_board.pl  convert_favboard.pl  convert_friends  convert_posts.pl  convert_user.pl  countid.c  dumpboardrc.c  fbbs.debian  horoscope.c  hot_topics  hot_topics.c  html_processor  install.sh  loadrecord.c  mailreport.c  menu_parser  newacct.c  picconv.c  post_convert  poststat.c  (+9 more)
util/game/: Makefile  Makefile.in  chicken.c  game.c  money.c  winmine.c
util/game/pip/: pip_basic.c  pip_job.c  pip_main.c  pip_menu.c  pip_pic.c  pip_play.c  pip_store.c
util/local_utl/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  account.c  averun.c  badbms.c  bbslocalmail.c  bbspop3d.c  bbstop.c  bbsuptime.c  birthday.c  chart.c  chart.h  checkbms.c  cleanuser.c  loadrecord.c  newacct.c  record.c  redirpic.c  refriend.c  refriend2.c  remail.c  resize.c  restruct.c  scandigest2.c  showbm.c  statBM.c  toppost.c  usage_day.c
util/other/: bbs.h  board2new.c  check_perm.c  checkall.c  clrdir.c  shmget.c  struct.h  userec.c  weather_world.pl
www/: BBSLIB.inc  CMakeLists.txt  Makefile  Makefile.am  bbs0an.c  bbsacount.c  bbsadl.c  bbsall.c  bbsalluser.c  bbsanc.c  bbsann.c  bbsbfind.c  bbsboa.c  bbsbrdadd.c  bbsccc.c  bbschat.c  bbsclear.c  bbscloak.c  bbscon.c  bbsdel.c  bbsdelf.c  bbsdelmail.c  bbsdelmsg.c  bbsdenyadd.c  bbsdenyall.c  bbsdenydel.c  bbsdoc.c  bbsdoreg.c  bbsedit.c  bbserr.c  bbsfadd.c  bbsfall.c  bbsfav.c  bbsfdel.c  bbsfdoc.c  bbsfind.c  bbsfoot.c  bbsfoot3.c  bbsform.c  bbsfriend.c  (+83 more)
(+280 files in other folders)
